force-app/main/default/objects/NI_Product_Release__c/NI_Product_Release__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-008718</description>
    <label>Product Release</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Releases</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>