force-app/main/default/objects/NI_Product_Release__c/fields/Expected_Development_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Development_Complete_Date__c</fullName>
    <description>Added Per Tim Pelletier on 12/15/2013</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected Development Complete Date</label>
    <type>Date</type>
</CustomField>