force-app/main/default/objects/NI_Product_Release__c/fields/Package_Installation_Link__c.field-meta.xml
<CustomField>
    <fullName>Package_Installation_Link__c</fullName>
    <description>NICC-017147:  For Force.com applications, this is the hyperlink to the package installation.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>For Force.com applications, this is the hyperlink to the package installation.</inlineHelpText>
    <label>Package Installation Link</label>
    <type>Url</type>
</CustomField>