force-app/main/default/objects/NI_Product_Release__c/fields/Package_Name__c.field-meta.xml
<CustomField>
    <fullName>Package_Name__c</fullName>
    <description>NICC-017147:  Field Created</description>
    <formula>Managed_Package_Version__r.sfLma__Package__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Package Name of the selected Managed Package Version</inlineHelpText>
    <label>Package Name</label>
    <type>Text</type>
</CustomField>