force-app/main/default/objects/NI_Product_Release__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Group</label>
    <referenceTo>Product_Group__c</referenceTo>
    <relationshipLabel>Product Releases</relationshipLabel>
    <relationshipName>Product_Releases</relationshipName>
    <type>Lookup</type>
</CustomField>