force-app/main/default/objects/NI_Product_Release__c/fields/TFS_Release_URL__c.field-meta.xml
<CustomField>
    <fullName>TFS_Release_URL__c</fullName>
    <description>The URL of the Release object in TFS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TFS Release URL</label>
    <type>Url</type>
</CustomField>