force-app/main/default/objects/NI_Product_Release__c/validationRules/Released_Status_Must_Have_Product_Group.validationRule-meta.xml
<ValidationRule>
    <fullName>Released_Status_Must_Have_Product_Group</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
    ISBLANK(Product_Group__c),
    ISPICKVAL(Status__c, &quot;Released&quot;)  
)</errorConditionFormula>
    <errorDisplayField>Product_Group__c</errorDisplayField>
    <errorMessage>You must select a Product Group when setting the status to Released</errorMessage>
</ValidationRule>