force-app/main/default/objects/NI_Product_Release__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Expected_Development_Complete_Date__c</columns>
    <columns>Expected_General_Availability__c</columns>
    <columns>Product_Owner__c</columns>
    <columns>Release_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>