force-app/main/default/objects/NI_Product_Release__c/listViews/Delphi.listView-meta.xml
<ListView>
    <fullName>Delphi</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>Release_Vision_Statement__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Product_Line__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>Delphi BI,Delphi Diagrams,Delphi Global,Delphi Multi Property</value>
    </filters>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>Delphi Single Property</value>
    </filters>
    <label>Delphi</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>