force-app/main/default/objects/NI_Product_Release__c/listViews/Delphi_fdc.listView-meta.xml
<ListView>
    <fullName>Delphi_fdc</fullName>
    <columns>Release_Vision_Statement__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Product_Line__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>Delphi.fdc</value>
    </filters>
    <label>Delphi.fdc</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>