force-app/main/default/objects/NI_Product_Release__c/listViews/DirectBook2.listView-meta.xml
<ListView>
    <fullName>DirectBook2</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Expected_General_Availability__c</columns>
    <columns>Product_Owner__c</columns>
    <columns>Release_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>DirectBook</value>
    </filters>
    <label>DirectBook</label>
</ListView>