force-app/main/default/objects/NI_Product_Release__c/listViews/Integrations_Interfaces.listView-meta.xml
<ListView>
    <fullName>Integrations_Interfaces</fullName>
    <columns>Release_Vision_Statement__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Product_Line__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>HMS Interfaces,HRM - PMS,Other Interfaces,RMS Interfaces</value>
    </filters>
    <label>Integrations / Interfaces</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>