force-app/main/default/objects/NI_Product_Release__c/listViews/iPlan_Meeting_Matrix.listView-meta.xml
<ListView>
    <fullName>iPlan_Meeting_Matrix</fullName>
    <columns>Release_Vision_Statement__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Product_Line__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>iPlan,MeetingMatrix</value>
    </filters>
    <label>iPlan / Meeting Matrix</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>