force-app/main/default/objects/NI_Product_Release__c/listViews/Marketing_Demand_Generation.listView-meta.xml
<ListView>
    <fullName>Marketing_Demand_Generation</fullName>
    <columns>Release_Vision_Statement__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Product_Line__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>HRM</value>
    </filters>
    <label>Marketing &amp; Demand Generation</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>