force-app/main/default/objects/NI_Product_Release__c/listViews/Newmarket_Web_Services_NWS.listView-meta.xml
<ListView>
    <fullName>Newmarket_Web_Services_NWS</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>Release_Vision_Statement__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Product_Line__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>Newmarket Web Services (NWS),Third Party</value>
    </filters>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>Cendyn,I-Server (Base),MB Direct Book</value>
    </filters>
    <label>Newmarket Web Services (NWS)</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>