force-app/main/default/objects/NI_Product_Release__c/listViews/PMS.listView-meta.xml
<ListView>
    <fullName>PMS</fullName>
    <columns>Release_Vision_Statement__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Product_Line__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>Cloud PMS,On Property PMS</value>
    </filters>
    <label>PMS</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>