force-app/main/default/objects/NI_Product_Release__c/listViews/Sales_Automation.listView-meta.xml
<ListView>
    <fullName>Sales_Automation</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>Release_Vision_Statement__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Product_Line__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>Cendyn,Connex / Smarter Sourcing,MeetingBroker</value>
    </filters>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>MeetingBroker Channel,MeetingBroker Simplified User Exp (SUE)</value>
    </filters>
    <label>Sales Automation</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>